--- a/index.html
+++ b/index.html
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,intial-scale=1">
   <title>Pizzara restaurant</title>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header id ="top-nav-container">
+  <header id="top-nav-container">
     <div class="navbar">
       <div class="logo-container">
-        <a href="index.html"><img id = "pizzaralogo" src ="logo.png" alt = "pizzara logo" title = "pizzara logo"/></a>
+        <a href="index.html"><img id="pizzaralogo" src="logo.png" alt="pizzara logo" title="pizzara logo" /></a>
       </div>
       <div id="top-nav">
-        <nav>
+        <nav id ="desktop-nav">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="MenuPage.html">Menu</a></li>
+            <li>
+              <div class="menu-dropdown">
+                <a href="MenuPage.html" class="dropbtn">Menu</a>
+                <div class="dropdown-content">
+                  <a href="MenuPage.html">Pizzas</a>
+                  <a href="MenuPage.html">Sides</a>
+                  <a href="MenuPage.html">Drinks</a>
+                </div>
+              </div>
+            </li>
             <li><a href="BookingPage.html">Booking</a></li>
             <li><a href="OrderPage.html">Order</a></li>
-            <li><a href="AboutPage.html">About</a></li>
-            <li><a href="ContactUs.html">Contact</a></li>
-            <div class="button-container">
-              <button class = add-to-cart-button>
-                <img class="cart-icon" src = "cart.png" alt = "cart icon">
-                <span class="total-price">$120.00</span>
-                <div class=item-count-circle>
-                  <span class="item-count">3</span>
+            <li>
+              <div class="menu-dropdown">
+                <a href="AboutPage.html" class="dropbtn">About</a>
+                <div class="dropdown-content">
+                  <a href="AboutPage.html">lnfo</a>
+                  <a href="AboutPage.html">Location</a>
+                  <a href="AboutPage.html">Contact</a>
                 </div>
-              </button>
+              </div>
+            </li>
+            <li><a href="ContactUs.html">Contact</a></li>
+            <div class="add-to-cart-button-container">
+              <div class="add-to-cart-button">
+                <svg class="cart-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
+                </svg>
+                <span class="item-count">0</span>
+              </div>
             </div>
           </ul>
-  
         </nav>
         <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
-          <div class = "bar1"></div>
-          <div class = "bar2"></div>
-          <div class = "bar3"></div>
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
           <ul class="mobile-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="MenuPage.html">Menu</a></li>
@@ -51,18 +67,31 @@
       </div>
     </div>
   </header>
-  <script src="script.js"></script>
+  <section class="">
+    <div id="cart">
+      <div id="cart-header">
+        <h1>Your Cart</h1>
+      </div>
+      <div class="cart-items">
+
+      </div>
+      <div id="cart-buttons">
+        <button class="close-button">Close</button>
+        <button class="checkout-button">Check Out</button> 
+      </div>
+    </div>
+  </section>
   <section>
     <div id="home-banner">
       <div id="title">
         <h2>The BEST Pizza In Town</h2>
         <h1>Welcome To Pizzara</h1>
         <img class="header-image" src="">
-      </div> 
+      </div>
       <button class="book-button" onclick="window.location.href='BookingPage.html'">
         <a>Book Now</a>
       </button>
-      <img class ="home-pizza" src="pizza-home.png" alt="homepage banner pizza image">
+      <img class="home-pizza" src="pizza-home.png" alt="homepage banner pizza image">
     </div>
   </section>
   <section>
@@ -70,7 +99,9 @@
       <div id="home-order-segment-text">
         <h2>Welcome to</h2>
         <h1>Papa's Pizza</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in </p>
       </div>
       <div id="open-hours">
         <div class="open-hours-icon"></div>
@@ -87,46 +118,19 @@
       </button>
     </div>
   </section>
+  <div class="white-space"></div>
   <section>
-    <div id = "footer-container">
-      <div id="footer-details">
-        <h1>Details</h1>
-        <a><strong>Location: </strong>5 Otawa Road, tot exist, Auckland New Zealand</a>
-        <a><strong>Hotline: </strong>0800PIZZARA</a>
-        <a><strong>Email: </strong>PapasPizzara123456@gmail.com</a>
-      </div>
-      <div class="line-break"></div>
-      <div id="footer-hours">
-        <h1>Opening Hours</h1>
-        <a><strong>Mon - Tues: </strong>10.00 am - 8.00 pm</a>
-        <a><strong>Wed - Thur: </strong>10.00 am - 8.00 pm</a>
-        <a><strong>Fri - Sat: </strong>10.00 am - 8.00 pm</a>
-        <a><strong>Sun </strong>10.00 am - 8.00 pm</a>
-      </div>
-      <div class="line-break"></div>
-      <div id="footer-links">
-        <h1>Useful Links</h1>
-        <a><strong>Home</strong></a>
-        <a><strong>Menu</strong></a>
-        <a><strong>Booking</strong></a>
-        <a><strong>Order</strong></a>
-        <a><strong>About</strong></a>
-        <a><strong>Contact</strong></a>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class = "Breadcrumb-container">
+    <div id="footer-container">
+      <a>© Pizzara all Rights Reserved. Designed by
+        Ash Setford</a>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="MenuPage.html">Menu</a></li>
-        <li><a href="BookingPage.html">Booking</a></li>
-        <li><a href="OrderPage.html">Order</a></li>
-        <li><a href="AboutPage.html">About</a></li>
-        <li><a href="ContactUs.html">Contact</a></li>
+        <li><img class="footer-icons" src="faceboo.png" width="40" alt="facebook icon"></li>
+        <li><img class="footer-icons" src="twtter.png" width="40" alt="twitter icon"></li>
+        <li><img class="footer-icons" src="nstagram.png" width="40" alt="instagram logo icon"></li>
+        <li><img class="footer-icons" src="youtube.png" width="40" alt="youtube icon"></li>
       </ul>
-      <button class="toggle-button" onclick="toggleBreadcrumb(this)">
-    </div>
   </section>
+  <script src="script.js"></script>
 </body>
+
 </html>
