--- a/template.html
+++ b/template.html
@@ -50,54 +50,16 @@
   </header>
   <script src="script.js"></script>
   <div class="break"></div>
-  <section id = "footer">
-    <div id = "footer-top">
-      <div id = footer-logo>
-        <img id = "pizzaralogo2" src = "logo.png" alt = "pizza logo">
-        <div id = "footer-details">
-          <a><strong>Location: </strong>5 Otawa Road, <br> tot exist, Auckland New Zealand</a></li>
-          <a><strong>Hotline: </strong>0800PIZZARA</a></li>
-          <a><strong>Email: </strong>PapasPizzara123456@gmail.com</a></li>
-        </div>
-      </div>
-      <div class = "line-break"></div>
-      <div id = "footer-hours">
-        <h1>Opening hours</h1>
-        <a><strong>Mon - Tues: </strong>6.00 am - 10.00 pm</a>
-        <a><strong>Wed - Fri: </strong>6.00 am - 10.00 pm</a>
-        <a><strong>Sat: </strong>6.00 am - 10.00 pm</a>
-        <div class = sunday-hours>
-          <a><strong>Sun: </strong></a>
-          <div class = "sunday">
-            <a>Closed</a>
-          </div>
-        </div>
-      </div>
-      <div class = "line-break"></div>
-      <div id="footer-links">
-        <h1>Useful links</h1>
-        <a href="index.html">Home</a>
-        <a href="MenuPage.html"">Menu</a>
-        <a href="AboutPage.html"">About us</a>
-        <a href="OrderPage.html">Order Online</a>
-        <a href="BookingPage.html">Reservations</a>
-        <a href="ContactUs.html">Contact Us</a>
-      </div>
-      <div class = "line-break"></div>
-      <div id="footer-attrubution">
-        <h1>Credits</h1>
-        <a>Travis</a>
-        <a>Michale</a>
-        <a>Freepik</a>
-        <a>Pickfree</a>
-        <a>J.Jona.Jameson</a>
-        <a>Short king</a>
-      </div>
-    </div>
-    <div class = "line-break-bottom"></div>
-    <div id="footer-credit">
-      <a>© Pizzara all Rights Reserved. Designed by Ash Setford</a>
-    </div>
+  <section>
+    <div id = "footer-container">
+      <a>© Pizzara all Rights Reserved. Designed by
+      Ash Setford</a>
+      <ul>
+        <li><img class ="footer-icons" src ="faceboo.png" width = "40" alt="facebook icon"></li>
+        <li><img class ="footer-icons" src ="twtter.png" width = "40" alt="twitter icon"></li>
+        <li><img class ="footer-icons" src ="nstagram.png" width = "40" alt="instagram logo icon"></li>
+        <li><img class ="footer-icons" src ="youtube.png" width = "40" alt="youtube icon"></li>
+      </ul>
   </section>
 </body>
 </html>
