--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,intial-scale=1">
   <title>Pizzara restaurant</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
   <header id="top-nav-container">
-    <div class="navbar">
+    <div class="navbar-mine" >
       <div class="logo-container">
-        <a href="index.html"><img id="pizzaralogo" src="logo.png" alt="pizzara logo" title="pizzara logo" /></a>
+        <a href="index.html"><img id="pizzaralogo" src="logo.png" alt="pizzara logo" title="pizzara logo" loading="lazy"></a>
       </div>
-      <div id="top-nav">
+      <div id="top-nav" class="bootstrap-fix">
         <nav id ="desktop-nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
             <li>
               <div class="menu-dropdown">
                 <a href="MenuPage.html" class="dropbtn">Menu</a>
                 <div class="dropdown-content">
-                  <a href="MenuPage.html">Pizzas</a>
+                  <a href="MenuPage.html#pizza-section">Pizzas</a>
                   <a href="MenuPage.html">Sides</a>
                   <a href="MenuPage.html">Drinks</a>
                 </div>
               </div>
             </li>
             <li><a href="BookingPage.html">Booking</a></li>
-            <li><a href="OrderPage.html">Order</a></li>
+            <li><a href="order.html">Order</a></li>
             <li>
               <div class="menu-dropdown">
                 <a href="AboutPage.html" class="dropbtn">About</a>
@@ -56,10 +57,15 @@
           <div class="bar2"></div>
           <div class="bar3"></div>
           <ul class="mobile-menu">
+            <div id="hamburger-icon" onclick="toggleMobileMenu(this)" class="mobile-close-nav">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
             <li><a href="index.html">Home</a></li>
             <li><a href="MenuPage.html">Menu</a></li>
             <li><a href="BookingPage.html">Booking</a></li>
-            <li><a href="OrderPage.html">Order</a></li>
+            <li><a href="order.html">Order</a></li>
             <li><a href="AboutPage.html">About</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
           </ul>
@@ -77,16 +83,17 @@
       </div>
       <div id="cart-buttons">
         <button class="close-button">Close</button>
-        <button class="checkout-button">Check Out</button> 
+        <button class="checkout-button" href="order.html">Check Out</button> 
       </div>
     </div>
   </section>
   <section>
     <div id="home-banner">
       <div id="title">
-        <h2>The BEST Pizza In Town</h2>
-        <h1>Welcome To Pizzara</h1>
-        <img class="header-image" src="">
+        <h2 class="home-slogan-text">The BEST Pizza In Town</h2>
+        <h1 class="home-title-text">
+          <span class="title-word">Welcome</span> <span class="title-word">To</span> <span class="title-word">Pizzara</span>
+        </h1>
       </div>
       <button class="book-button" onclick="window.location.href='BookingPage.html'">
         <a>Book Now</a>
@@ -94,8 +101,9 @@
       <img class="home-pizza" src="pizza-home.png" alt="homepage banner pizza image">
     </div>
   </section>
-  <section>
-    <div id="home-order-segment-container">
+  
+  <section class="home-order-segment">
+    <div class="home-order-segment-container">
       <div id="home-order-segment-text">
         <h2>Welcome to</h2>
         <h1>Papa's Pizza</h1>
@@ -103,19 +111,114 @@
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat. Duis aute irure dolor in </p>
       </div>
-      <div id="open-hours">
-        <div class="open-hours-icon"></div>
-        <a>Open Hours</a>
-        <a>10am - 8pm</a>
-      </div>
-      <div id="contact">
-        <div class="contact-icon"></div>
-        <a>Contact Us</a>
-        <a>0800PIZZARA</a>
+      <div class="open-contact-container">
+        <div class="open-hours">
+          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <path fill-rule="evenodd" d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Zm11-4a1 1 0 1 0-2 0v4a1 1 0 0 0 .293.707l3 3a1 1 0 0 0 1.414-1.414L13 11.586V8Z" clip-rule="evenodd"/>
+          </svg>
+          <div class="open-contact-text">
+            <a>Open Hours</a>
+            <a>10am - 8pm</a>
+          </div>
+        </div>
+        <div class="contact">
+          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M7.978 4a2.553 2.553 0 0 0-1.926.877C4.233 6.7 3.699 8.751 4.153 10.814c.44 1.995 1.778 3.893 3.456 5.572 1.68 1.679 3.577 3.018 5.57 3.459 2.062.456 4.115-.073 5.94-1.885a2.556 2.556 0 0 0 .001-3.861l-1.21-1.21a2.689 2.689 0 0 0-3.802 0l-.617.618a.806.806 0 0 1-1.14 0l-1.854-1.855a.807.807 0 0 1 0-1.14l.618-.62a2.692 2.692 0 0 0 0-3.803l-1.21-1.211A2.555 2.555 0 0 0 7.978 4Z"/>
+          </svg>
+          <div class="open-contact-text">
+            <a>Contact Us</a>
+            <a>0800PIZZARA</a>
+          </div>
+        </div>
       </div>
       <button class="order-button" onclick="window.location.href='OrderPage.html'">
         <a>Order Online</a>
       </button>
+    </div>
+    <img class="home-order-image" src="our-special.png" loading="lazy">
+  </section>
+  <section class="specials-segment">
+    <div class="specials-container">
+      <div class="specials-header">
+        <h2>A Specials Slogan</h2>
+        <h1>Our Specials</h1>
+      </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="carousel-item-inner">
+              <img src="pizza1.png" class="special-img" alt="special 1">
+              <div class="specials-slide-text">
+                <div class="specials-slide-text-inner">
+                  <div class="carousel-text-header">
+                    <h2>Special 1</h2>
+                    <button class="add-cart-button" id="specials-btn-1" data-title="1">Add To Cart</button>
+                  </div>
+                  <div class="specials-text">
+                    <a>Lorem ipsum dolor sit amet, est nobis recusabo adipiscing ex, mel commodo menandri at. Rebum congue blandit ex eam. Per vero sensibus an. Vocibus repudiandae pri id, at mea legendos honestatis.</a>
+                  </div>
+                  <div class="specials-prices">
+                    <a>Reg: $25.00</a>
+                    <a>LG: $30.00</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item-inner">
+              <img src="pizza2.png" class="special-img" alt="special 2">
+              <div class="specials-slide-text">
+                <div class="specials-slide-text-inner">
+                  <div class="carousel-text-header">
+                    <h2>Special 2</h2>
+                    <button class="add-cart-button" id="specials-btn-2" data-title="1">Add To Cart</button>
+                  </div>
+                  <div class="specials-text">
+                    <a>Lorem ipsum dolor sit amet, est nobis recusabo adipiscing ex, mel commodo menandri at. Rebum congue blandit ex eam. Per vero sensibus an. Vocibus repudiandae pri id, at mea legendos honestatis.</a>
+                  </div>
+                  <div class="specials-prices">
+                    <a>Reg: $25.00</a>
+                    <a>LG: $30.00</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-item-inner">
+              <img src="pizza3.png" class="special-img" alt="special 3">
+              <div class="specials-slide-text">
+                <div class="specials-slide-text-inner">
+                  <div class="carousel-text-header">
+                    <h2>Special 3</h2>
+                    <button class="add-cart-button" id="specials-btn-3" data-title="1">Add To Cart</button>
+                  </div>
+                  <div class="specials-text">
+                    <a>Lorem ipsum dolor sit amet, est nobis recusabo adipiscing ex, mel commodo menandri at. Rebum congue blandit ex eam. Per vero sensibus an. Vocibus repudiandae pri id, at mea legendos honestatis.</a>
+                  </div>
+                  <div class="specials-prices">
+                    <a>Reg: $25.00</a>
+                    <a>LG: $30.00</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
   </section>
   <div class="white-space"></div>
@@ -130,7 +233,10 @@
         <li><img class="footer-icons" src="youtube.png" width="40" alt="youtube icon"></li>
       </ul>
   </section>
+  <script src="jquery-3.6.0.min.js"></script>
   <script src="script.js"></script>
+  <script src="specials.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
